--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "4",
-    "lucide": "^0.475.0",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-axios": "^2.0.6",
     "react-dom": "^19.0.0",
