--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "4",
+    "axios": "^1.8.2",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-axios": "^2.0.6",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
-    "swiper": "^11.2.4"
+    "swiper": "^11.2.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
